# forcedimension_core-python

./: .readthedocs.yaml  .travis.yml  CHANGELOG.md  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  style.yml  tests.yml
docs/source/: conf.py  direct_copy_optimization.rst  forcedimension_core.containers.rst  forcedimension_core.dhd-doc.rst  forcedimension_core.dhd.adaptors.rst  forcedimension_core.dhd.constants.rst  forcedimension_core.dhd.direct.rst  forcedimension_core.dhd.direct_expert.rst  forcedimension_core.dhd.expert.rst  forcedimension_core.dhd.os_independent.rst  forcedimension_core.dhd.rst  forcedimension_core.drd-doc.rst  forcedimension_core.drd.direct.rst  forcedimension_core.drd.rst  forcedimension_core.rst  forcedimension_core.typing.rst  index.rst  installation.rst  modules.rst  theory_of_operation.rst
docs/source/_static/: table.css
examples/spring_mass_damper/: spring_mass_damper.py
forcedimension_core/: __init__.py  constants.py  containers.py  numpy_containers.py  runtime.py  typing.py  util.py
forcedimension_core/containers/: __init__.py  numpy.py
forcedimension_core/deprecated/: constants.py
forcedimension_core/dhd/: __init__.py  adaptors.py  constants.py  direct.py  direct_expert.py  expert.py  os_independent.py
forcedimension_core/dhd/expert/: __init__.py  direct.py
forcedimension_core/drd/: __init__.py  adaptors.py  direct.py
tests/: __init__.py  test_adaptors.py  test_constants.py  test_containers.py  test_numpy_containers.py  test_runtime.py  test_util.py
tests/dhd/: __init__.py  test_direct.py  test_expert.py  test_os_independent.py  test_standard.py
tests/drd/: __init__.py
