[tool.poetry]
name = "forcedimension-core"
version = "0.1.0"
description = "Unofficial Python Bindings for the Force Dimension SDK"
authors = ["Ember Chow <emberchow.business@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
documentation = "https://force-dimension-core-python-documentation.readthedocs.io/en/latest/index.html"
repository = "https://github.com/EmDash00/forcedimension_core-python"
classifiers = [
    "Python :: Implementation :: CPython",
    "Python :: Implementation :: PyPy",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
mock = "^5.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
