[tool.poetry]
name = "forcedimension-core"
version = "0.1.0"
description = "Unofficial Python Bindings for the Force Dimension SDK"
authors = ["Ember Chow <emberchow.business@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0"
documentation = "https://forcedimension-core-python-docs.readthedocs.io/en/v0.1.0/"
repository = "https://github.com/EmDash00/forcedimension_core-python"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
mock = "^5.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
